@@ -22,8 +22,15 @@ import java.util.Map;
 
 import org.apache.hadoop.yarn.api.records.LocalResourceVisibility;
 import org.apache.hadoop.yarn.server.nodemanager.containermanager.container.Container;
+import org.apache.hadoop.yarn.server.nodemanager.containermanager.container.ContainerImpl;
 import org.apache.hadoop.yarn.server.nodemanager.containermanager.localizer.LocalResourceRequest;
+import org.apache.hadoop.yarn.server.nodemanager.containermanager.localizer.ResourceLocalizationService;
 
+/**
+ * Event that requests that the {@link ResourceLocalizationService} localize
+ * a set of resources for the given container. This is generated by
+ * {@link ContainerImpl} during container initialization.
+ */
 public class ContainerLocalizationRequestEvent extends
     ContainerLocalizationEvent {
 
